--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  background: rgb(72, 29, 72);
+  color: beige;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
